application-manifests/go-demo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-demo
    tier: backend
  name: go-demo
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: go-demo
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: go-demo
        tier: backend
    spec:
      containers:
      - image: jcostabe/go-demo-2:1.1
        imagePullPolicy: Always
        name: go-demo
        volumeMounts:
        - name: config-volume
          mountPath: /config
        resources: 
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi 
      volumes:
        - name: config-volume
          configMap:
            name: go-demo-cfg
